--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -26,7 +26,7 @@
             <li class="nav-item"><a href="#" class="nav-link">OFERTAS</a></li>
             <li class="nav-item"><a href="#" class="nav-link">SURCURSALES</a></li>
             <li class="nav-item"><a href="#" class="nav-link">NOSOTROS</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">INICIAR SECCION</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">INICIAR SESION</a></li>
             <li class="nav-item"><a href="#" class="nav-link"><img class="imagen" width="30" heigth="30" src="img/pizza.svg">
                 ORDENAR</a></li>
           </ul>
