--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -15,14 +15,14 @@
   <header>
     <nav class="navbar navbar-expand-md navbar-dark un-nav bg-light nav fixed-top ">
       <div class="container">
-        <a href="#" class="navbar-brand"><img class="imagen" width="65" heigth="55" src="img/Lanonna.svg"></a>
+        <a href="index.html" class="navbar-brand"><img class="imagen" width="65" heigth="55" src="img/Lanonna.svg"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar"
           aria-expanded="false" aria-label="Menu de Navegacion">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbar">
           <ul class="navbar-nav  mr-auto">
-            <li class="nav-item"><a href="#" class="nav-link">MENU</a></li>
+            <li class="nav-item"><a href="menu.html" class="nav-link">MENU</a></li>
             <li class="nav-item"><a href="#" class="nav-link">OFERTAS</a></li>
             <li class="nav-item"><a href="#" class="nav-link">SURCURSALES</a></li>
             <li class="nav-item"><a href="#" class="nav-link">NOSOTROS</a></li>
@@ -55,7 +55,6 @@
       </div>
   </main>
 
-
   <!--Final del contenido principal-->
 
 
@@ -74,8 +73,8 @@
             <a href="#" class="grupo"> Grupo1.com</a>
           </div>
           <div class="redes text-right">
-            <a href="#" class="btn btn-link "><img class="imagen" width="36" heigth="36" src="img/facebook.svg"></a>
-            <a href="#" class="btn btn-link "><img class="imagen" width="36" heigth="36" src="img/instagram.svg"></a>
+            <a href="#" class="btn btn-link"><img class="imagen-f" width="36" heigth="36" src="img/facebook.svg"></a>
+            <a href="#" class="btn btn-link"><img class="imagen-i" width="36" heigth="36" src="img/instagram.svg"></a>
           </div>
 
           <div class="condciones text-center ">
