--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -46,13 +46,58 @@
           <!--OFERTA-->
           <div class="aside ">
             <div class="container">
-              <a href="#" class="nav-link"><img src="img/OFP.jpg" alt=""></a>
+              <a href="#" class="nav-link"><img class="img-oferta" src="img/OFP.jpg" alt=""></a>
+              <!--Boton de comprar oferta del menu principal-->
               <button class="btn comprar btn-dark"><a href="#" class="nav-link">Comprar</a></button>
             </div>
             <!--Fin de Oferta-->
           </div>
+
+          <!--Fin de aside class-->
+          <!--
+<div class="contenedor">
+    <div class="row">
+        <div class="col ">
+          <div class="slide">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="img/PZ-1.jpg" class="d-block w-100 " alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/PZ-1.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/PZ-1.jpg." class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
+          -->
+          <!--class slide-->
         </div>
       </div>
+      <!--Fin Row Slide-->
+    </div>
+
+
+
+    </div>
+    </div>
+    </div>
   </main>
 
   <!--Final del contenido principal-->
