--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -23,12 +23,16 @@
         <div class="collapse navbar-collapse" id="navbar">
           <ul class="navbar-nav  mr-auto">
             <li class="nav-item"><a href="menu.html" class="nav-link">MENU</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">OFERTAS</a></li>
+            <li class="nav-item"><a href="ofertas.html" class="nav-link">OFERTAS</a></li>
             <li class="nav-item"><a href="#" class="nav-link">SURCURSALES</a></li>
             <li class="nav-item"><a href="#" class="nav-link">NOSOTROS</a></li>
             <li class="nav-item"><a href="#" class="nav-link">INICIAR SESION</a></li>
-            <li class="nav-item"><a href="#" class="nav-link"><img class="imagen" width="30" heigth="30" src="img/pizza.svg">
-                ORDENAR</a></li>
+            <li class="nav-item">
+              <a href="index.html?p=ordenar" class="nav-link">
+                <img class="imagen" width="30" heigth="30" src="img/pizza.svg">
+                ORDENAR
+              </a>
+            </li>
           </ul>
         </div>
       </div>
@@ -37,66 +41,60 @@
   </header>
   <!-- End Header-->
 
-
   <!--Contenido principal-->
   <main>
     <div class="Container">
       <div class="row">
         <div class="col-12">
           <!--OFERTA-->
-          <div class="aside ">
-            <div class="container">
-              <a href="#" class="nav-link"><img class="img-oferta" src="img/OFP.jpg" alt=""></a>
-              <!--Boton de comprar oferta del menu principal-->
-              <button class="btn comprar btn-dark"><a href="#" class="nav-link">Comprar</a></button>
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="img/OFP.jpg" alt="oferta">
+            <a href="#" class="btn comprar btn-dark">Comprar</a>
+            <!--Boton de comprar oferta del menu principal-->
+          </div>
+          <!--Fin de card class-->
+          <div class="contenedor">
+            <div class="row">
+              <div class="col mt-3">
+                <div class="slide">
+                  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="img/SL-1.jpg" class="d-block w-200 " alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/SL-2.jpg" class="d-block w-200" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/SL-3.jpg" class="d-block w-200" alt="...">
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
+                </div>
+
+                <!--class slide-->
+              </div>
             </div>
-            <!--Fin de Oferta-->
+            <!--Fin Row Slide-->
           </div>
 
-          <!--Fin de aside class-->
-          <!--
-<div class="contenedor">
-    <div class="row">
-        <div class="col ">
-          <div class="slide">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="img/PZ-1.jpg" class="d-block w-100 " alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="img/PZ-1.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="img/PZ-1.jpg." class="d-block w-100" alt="...">
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>
-          </div>
-          -->
-          <!--class slide-->
+
+
         </div>
       </div>
-      <!--Fin Row Slide-->
-    </div>
-
-
-
-    </div>
-    </div>
     </div>
   </main>
 
@@ -111,7 +109,6 @@
           <div class="contenedor-links">
             <div><a href="#" class="btn btn-link">NUESTRAS PIZZAS</a>|</div>
             <div> <a href="#" class="btn btn-link">LEGAL</a></div>
-
           </div>
           <div class="footer-copyright text-center">
             © 2018 Copyright:
@@ -121,7 +118,6 @@
             <a href="#" class="btn btn-link"><img class="imagen-f" width="36" heigth="36" src="img/facebook.svg"></a>
             <a href="#" class="btn btn-link"><img class="imagen-i" width="36" heigth="36" src="img/instagram.svg"></a>
           </div>
-
           <div class="condciones text-center ">
             <p>Cualquier cargo de entrega no es una propina pagada a su conductor.
               Por favor recompense a su conductor por lo increíble. Nuestros conductores llevan menos de RD $ 800.
@@ -138,15 +134,10 @@
 
               Nuestra garantía: Si no está completamente satisfecho con su experiencia con
               La nonna Pizza, lo corregiremos o le reembolsaremos su dinero.</p>
-
           </div>
-
-
         </div>
-
       </div>
     </div>
-
   </footer>
   <!-- End Footer -->
 
