--- a/Proyecto/menu.html
+++ b/Proyecto/menu.html
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbar">
           <ul class="navbar-nav  mr-auto">
             <li class="nav-item"><a href="menu.html" class="nav-link">MENU</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">OFERTAS</a></li>
+            <li class="nav-item"><a href="ofertas.html" class="nav-link">OFERTAS</a></li>
             <li class="nav-item"><a href="#" class="nav-link">SURCURSALES</a></li>
             <li class="nav-item"><a href="#" class="nav-link">NOSOTROS</a></li>
             <li class="nav-item"><a href="#" class="nav-link">INICIAR SESION</a></li>
