Ordenar iniciar seccion y location
cambios

--- a/Proyecto/iniciar.html
+++ b/Proyecto/iniciar.html
@@ -26,12 +26,12 @@
                     <ul class="navbar-nav  mr-auto">
                         <li class="nav-item"><a href="menu.html" class="nav-link">MENU</a></li>
                         <li class="nav-item"><a href="ofertas.html" class="nav-link">OFERTAS</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">SURCURSALES</a></li>
+                        <li class="nav-item"><a href="location.html" class="nav-link">SURCURSALES</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">NOSOTROS</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">INICIAR SESION</a></li>
+                        <li class="nav-item"><a href="iniciar.html" class="nav-link">INICIAR SESION</a></li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                <img class="imagen" width="30" heigth="30"src="img/pizza.svg">
+                            <a href="oredenar.html" class="nav-link">
+                                <img class="imagen" width="30" heigth="30" src="img/pizza.svg">
                                 ORDENAR
                             </a>
                         </li>
@@ -47,12 +47,22 @@
     <main>
         <div class="container">
             <div class="row">
-                <div class="col">
-                    <label class="subtitulo" for="">OFERTAS</label>
-                    <hr>
-                    <div class="card Of-1" style="width: 15rem;">
-                        <img class="card-img-top" src="img/Card.jpg" alt="Card image cap">
-                    </div>
+                <div class="col-md-4 offset-md-4">
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                                placeholder="Enter email">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Password</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <div>
+                            <a href="registrarse.html">Registrarse</a>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -65,7 +75,7 @@
             <div class="row ">
                 <div class="col-lg-12">
                     <div class="contenedor-links">
-                        <div><a href="#" class="btn btn-link">NUESTRAS PIZZAS</a>|</div>
+                        <div><a href="nuespizzas.html" class="btn btn-link">NUESTRAS PIZZAS</a>|</div>
                         <div> <a href="#" class="btn btn-link">LEGAL</a></div>
 
                     </div>
