--- a/Proyecto/menu.html
+++ b/Proyecto/menu.html
@@ -26,10 +26,11 @@
           <ul class="navbar-nav  mr-auto">
             <li class="nav-item"><a href="menu.html" class="nav-link">MENU</a></li>
             <li class="nav-item"><a href="ofertas.html" class="nav-link">OFERTAS</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">SURCURSALES</a></li>
+            <li class="nav-item"><a href="location.html" class="nav-link">SURCURSALES</a></li>
             <li class="nav-item"><a href="#" class="nav-link">NOSOTROS</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">INICIAR SESION</a></li>
-            <li class="nav-item"><a href="#" class="nav-link"><img class="imagen" width="30" heigth="30" src="img/pizza.svg">
+            <li class="nav-item"><a href="iniciar.html" class="nav-link">INICIAR SESION</a></li>
+            <li class="nav-item"><a href="oredenar.html" class="nav-link"><img class="imagen" width="30" heigth="30"
+                  src="img/pizza.svg">
                 ORDENAR</a></li>
           </ul>
         </div>
@@ -262,7 +263,7 @@
       <div class="row ">
         <div class="col-lg-12">
           <div class="contenedor-links">
-            <div><a href="#" class="btn btn-link">NUESTRAS PIZZAS</a>|</div>
+            <div><a href="nuespizzas.html" class="btn btn-link">NUESTRAS PIZZAS</a>|</div>
             <div> <a href="#" class="btn btn-link">LEGAL</a></div>
 
           </div>
