--- a/Proyecto/nuespizzas.html
+++ b/Proyecto/nuespizzas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="esp">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -11,7 +11,9 @@
   <title>La nonna</title>
 </head>
 
+
 <body>
+
   <header>
     <nav class="navbar navbar-expand-md navbar-dark un-nav bg-light nav fixed-top ">
       <div class="container">
@@ -27,12 +29,8 @@
             <li class="nav-item"><a href="location.html" class="nav-link">SURCURSALES</a></li>
             <li class="nav-item"><a href="#" class="nav-link">NOSOTROS</a></li>
             <li class="nav-item"><a href="iniciar.html" class="nav-link">INICIAR SESION</a></li>
-            <li class="nav-item">
-              <a href="index.html?p=ordenar" class="nav-link">
-                <img class="imagen" width="30" heigth="30" src="img/pizza.svg">
-                ORDENAR
-              </a>
-            </li>
+            <li class="nav-item"><a href="oredenar.html" class="nav-link"><img class="imagen" width="30" heigth="30" src="img/pizza.svg">
+                ORDENAR</a></li>
           </ul>
         </div>
       </div>
@@ -41,62 +39,45 @@
   </header>
   <!-- End Header-->
 
+
   <!--Contenido principal-->
   <main>
-    <div class="Container">
-      <div class="row">
-        <div class="col-12">
-          <!--OFERTA-->
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="img/OFP.jpg" alt="oferta">
-            <a href="#" class="btn comprar btn-dark">Comprar</a>
-            <!--Boton de comprar oferta del menu principal-->
-          </div>
-          <!--Fin de card class-->
-          <div class="contenedor">
-            <div class="row">
-              <div class="col mt-3">
-                <div class="slide">
-                  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="img/SL-1.jpg" class="d-block w-200 " alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="img/SL-2.jpg" class="d-block w-200" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="img/SL-3.jpg" class="d-block w-200" alt="...">
-                      </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
-                  </div>
-                </div>
+        <div class="Container">
+                <div class="row">
+                  <div class="col-12">
+<!-- Slides -->
+<div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="img/NPZ1.jpg" alt="" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+            <img src="img/NPZ2.jpg" alt="" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+            <img src="img/NPZ3.jpg" alt="" class="d-block w-100">
+        </div>
+    </div>
 
-                <!--class slide-->
-              </div>
-            </div>
-            <!--Fin Row Slide-->
-          </div>
+    <!-- Controles -->
+    <a href="#slideshow" class="carousel-control-prev" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Anterior</span>
+    </a>
+    <a href="#slideshow" class="carousel-control-next" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Siguiente</span>
+    </a>
+</div>
+</div>
+</div>
 
-
-
+          <!--Fin de Menu-->
         </div>
       </div>
     </div>
   </main>
+
+
 
   <!--Final del contenido principal-->
 
@@ -109,6 +90,7 @@
           <div class="contenedor-links">
             <div><a href="nuespizzas.html" class="btn btn-link">NUESTRAS PIZZAS</a>|</div>
             <div> <a href="#" class="btn btn-link">LEGAL</a></div>
+
           </div>
           <div class="footer-copyright text-center">
             © 2018 Copyright:
@@ -118,6 +100,7 @@
             <a href="#" class="btn btn-link"><img class="imagen-f" width="36" heigth="36" src="img/facebook.svg"></a>
             <a href="#" class="btn btn-link"><img class="imagen-i" width="36" heigth="36" src="img/instagram.svg"></a>
           </div>
+
           <div class="condciones text-center ">
             <p>Cualquier cargo de entrega no es una propina pagada a su conductor.
               Por favor recompense a su conductor por lo increíble. Nuestros conductores llevan menos de RD $ 800.
@@ -134,17 +117,25 @@
 
               Nuestra garantía: Si no está completamente satisfecho con su experiencia con
               La nonna Pizza, lo corregiremos o le reembolsaremos su dinero.</p>
+
           </div>
+
+
         </div>
+
       </div>
     </div>
+
   </footer>
   <!-- End Footer -->
 
-  <!-- Bootstrap Js, Jquery JS -->
+
   <script src="js/jquery.min.js"></script>
+
   <script src="js/popper.min.js"></script>
+
   <script src="js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
