--- a/Proyecto/ofertas.html
+++ b/Proyecto/ofertas.html
@@ -26,10 +26,10 @@
                     <ul class="navbar-nav  mr-auto">
                         <li class="nav-item"><a href="menu.html" class="nav-link">MENU</a></li>
                         <li class="nav-item"><a href="ofertas.html" class="nav-link">OFERTAS</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">SURCURSALES</a></li>
+                        <li class="nav-item"><a href="location.html" class="nav-link">SURCURSALES</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">NOSOTROS</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">INICIAR SESION</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link"><img class="imagen" width="30" heigth="30"
+                        <li class="nav-item"><a href="iniciar.html" class="nav-link">INICIAR SESION</a></li>
+                        <li class="nav-item"><a href="oredenar.html" class="nav-link"><img class="imagen" width="30" heigth="30"
                                     src="img/pizza.svg">
                                 ORDENAR</a></li>
                     </ul>
@@ -45,11 +45,34 @@
     <main>
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col col-md-12 col-xs-12">
                     <label class="subtitulo" for="">OFERTAS</label>
                     <hr>
+
                     <!--Caja de Oferta 1 -->
-                    <div class="contenedor"> <div class="col col-md-2 p-1 m-3 ">
+                    <div class="contenedor col col-md-2 p-1 m-3">
+                        <div class="card Of-1" style="width: 15rem;">
+                            <img class="carta" src="img/Card.jpg" alt="Card image cap">
+                            <div class="medio">
+                                <div class="texto-o"><a href="#" class="btn btn-darki ">Comprar</a></div>
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--Caja de Oferta 2 -->
+                    <div class="contenedor col col-md-2 p-1 m-3">
+                        <div class="card Of-1" style="width: 15rem;">
+                            <img class="carta" src="img/Card.jpg" alt="Card image cap">
+                            <div class="medio">
+                                <div class="texto-o"><a href="#" class="btn btn-darki ">Comprar</a></div>
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!-- <div class="contenedor"> <div class="col col-md-2 p-1 m-3 ">
                         <div class="card Of-1" style="width: 15rem;">
                             <img class="card-img-top carta "src=" img/Card.jpg" alt="Card image cap">
                             <div class="medio">
@@ -59,10 +82,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                     <!--Fin de card-->
 
-                    <div class="contenedor"> <div class="col col-md-2 p-1 m-3 ">
+                    <!-- <div class="contenedor"> <div class="col col-md-2 p-1 m-3 ">
                         <div class="card Of-1" style="width: 15rem;">
                             <img class="card-img-top carta "src=" img/Card.jpg" alt="Card image cap">
                             <div class="medio">
@@ -72,7 +95,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
                 </div>
@@ -93,7 +116,7 @@
             <div class="row ">
                 <div class="col-lg-12">
                     <div class="contenedor-links">
-                        <div><a href="#" class="btn btn-link">NUESTRAS PIZZAS</a>|</div>
+                        <div><a href="nuespizzas.html" class="btn btn-link">NUESTRAS PIZZAS</a>|</div>
                         <div> <a href="#" class="btn btn-link">LEGAL</a></div>
 
                     </div>
