Se le agrego la pagina de legal
se le agrego  a  la pagina de legal al proyecto.

--- a/Proyecto/oredenar.html
+++ b/Proyecto/oredenar.html
@@ -93,7 +93,7 @@
         <div class="col-lg-12">
           <div class="contenedor-links">
             <div><a href="nuespizzas.html" class="btn btn-link">NUESTRAS PIZZAS</a>|</div>
-            <div> <a href="#" class="btn btn-link">LEGAL</a></div>
+            <div> <a href="legal.html" class="btn btn-link">LEGAL</a></div>
 
           </div>
           <div class="footer-copyright text-center">
