--- a/Proyecto/location.html
+++ b/Proyecto/location.html
@@ -121,18 +121,13 @@
 
 
 
-
-
-
-
-
 <footer>
     <div class="container ">
         <div class="row ">
             <div class="col-lg-12">
                 <div class="contenedor-links">
                     <div><a href="nuespizzas.html" class="btn btn-link">NUESTRAS PIZZAS</a>|</div>
-                    <div> <a href="#" class="btn btn-link">LEGAL</a></div>
+                    <div> <a href="legal.html" class="btn btn-link">LEGAL</a></div>
 
                 </div>
                 <div class="footer-copyright text-center">
